<resources>
    <string name="app_name">AgentApp</string>
    <string name="alta">Alta</string>
    <string name="password">Password</string>
    <string name="usuario">Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_seccion">Iniciar Seccion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="completa_el_registro">Completa el Registro.</string>
    <string name="ingresa_el_apellido">Ingresa El apellido</string>
    <string name="ingresa_una_contrase_a">Ingresa Una Contraseña</string>
    <string name="ingresa_el_nombre">Ingresa El nombre</string>
    <string name="nombre">Nombre:</string>
    <string name="cancelar">Cancelar</string>
    <string name="apellido">Apellido:</string>
    <string name="dni">DNI:</string>

    <string-array name="EstadoCivil">
        <item>Seleccione</item>
        <item>Casado</item>
        <item>Soltero</item>
        <item>Viudo</item>
        <item>Divorciado</item>
        <item>Concubinato</item>
    </string-array>

    <string-array name="Nacionalidad">
        <item>Seleccione</item>
        <item>Argentina</item>
        <item>Boliviano</item>
        <item>Brasileño</item>
        <item>Chileno</item>
        <item>Chino</item>
        <item>Chino</item>
        <item>Colombiano</item>
        <item>Coreano</item>
        <item>Cubano</item>
        <item>Español</item>
        <item>Estadounidense</item>
        <item>Japonés</item>
        <item>Mexicano</item>
        <item>Paraguayo</item>
        <item>Peruano</item>
        <item>Uruguayo</item>
        <item>Venezolano</item>

    </string-array>
</resources>
